commit instalação angular-cli-ghpages

--- a/angular.json
+++ b/angular.json
@@ -117,8 +117,13 @@
               "devServerTarget": "exercicio01:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "exercicio01"
 }
